<resources>
    <string name="app_name_short">WLMDO</string>
    <string name="app_name_long">Who Lets My Dog Out?</string>
    <string name="title_home">Startseite</string>
    <string name="title_search">Suche</string>
    <string name="title_favorites">Favoriten</string>
    <string name="title_messages">Nachrichten</string>
    <string name="title_profil">Profil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Benutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="action_register">Registrieren</string>
    <string name="welcome">"Willkommen zurück "</string>
    <string name="register_header">"Erstelle ein Account"</string>
    <string name="register_submit">"Account erstellen"</string>
    <string name="register_firstname">"Vorname"</string>
    <string name="register_surname">"Nachname"</string>
    <string name="register_username">"Benutzername"</string>
    <string name="register_password_repeat">"Passwort wiederholen"</string>
    <string name="register_birthday">"Geburstag"</string>
    <string name="register_picture">"Profilbild"</string>
    <string name="register_dogwalker">"Gassiegänger?"</string>
    <string name="register_get_location">"Standort"</string>
    <string name="invalid_username">Kein valider Benutzername</string>
    <string name="invalid_password">Das Passwort muss mindestens 5 Zeichen enthalten</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="content_description">Hier sollte ein Bild sein</string>
    <string name="search_box_username">Benutzername:</string>
    <string name="search_box_range">Reichweite:</string>
    <string name="profil_email">E-Mail:</string>
    <string name="profil_address">Wohnort:</string>
    <string name="profil_birthday">Geburtsdatum:</string>
    <string name="profil_dog">Hundenamen:</string>
    <string name="profil_dogwalker">Gassigänger?</string>
    <string name="profil_change">Ändern</string>
    <string name="profil_settings">Einstellungen</string>
    <string name="profil_about_us">Über uns</string>


</resources>