<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".searchscreen.SearchBoxFragment"
    android:id="@+id/search_box_constraint">

    <ImageView
        android:id="@+id/search_box_background_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description"
        android:src="@drawable/search_user_background_grey"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/search_box_avatar_circle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:elevation="12dp"
        android:layout_marginBottom="75dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/search_box_avatar_avatar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/content_description" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/search_box_background_orange"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/search_user_background_orange"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintStart_toStartOf="@+id/search_box_background_orange"
        app:layout_constraintTop_toTopOf="@+id/search_box_background_orange">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_baseline_favorite_24"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/search_box_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_box_username"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/search_box_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_box_range"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>