<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchscreen.SearchActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/searchUserAvatarIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/searchUserMessageIcon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/messages_user_button"
                    android:onClick="sendToUserChat"/>

                <ImageView
                android:id="@+id/searchUserAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/content_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchuserforsurname"
                app:layout_constraintTop_toBottomOf="@+id/searchUserAvatarIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/searchForename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"/>

                <TextView
                    android:id="@+id/searchSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/searchEmail"
                app:layout_constraintTop_toBottomOf="@+id/searchuserforsurname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/searchEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="700"
                    android:text="@string/profil_email"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/searchEmailResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:textColor="@color/orange_500"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/searchDogs"
                app:layout_constraintTop_toBottomOf="@+id/searchEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/searchDogsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="700"
                    android:text="@string/profil_dog"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/SearchDogsResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:textColor="@color/orange_500"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/searchBirthday"
                app:layout_constraintTop_toBottomOf="@+id/searchDogs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/searchBirthdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="700"
                    android:text="@string/profil_birthday"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/searchBirthdayResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:textColor="@color/orange_500"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/searchIsDogwalker"
                app:layout_constraintTop_toBottomOf="@+id/searchBirthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/searchIsDogwalkerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="700"
                    android:text="@string/register_dogwalker"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/searchIsDogwalkerResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:clickable="true" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>